--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/tailwindcss": "^3.1.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -17,8 +18,12 @@
     "@types/node": "18.8.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.17",
+    "postcss-preset-env": "^7.8.2",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.8.4"
   }
 }
